--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "guzzlehttp/guzzle": "^7.3",
         "laravel/framework": "^9.0",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "mailchimp/marketing": "^3.0",
         "phpoffice/phpword": "dev-master",
+        "psr/simple-cache": "2.0",
         "realrashid/sweet-alert": "^5.1"
     },
     "require-dev": {
