--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
         "php": "^8.0",
         "barryvdh/laravel-dompdf": "^2.0",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.3",
         "laravel/framework": "^9.0",
         "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "^3.10",
         "maatwebsite/excel": "^3.1",
         "mailchimp/marketing": "^3.0",
         "phpoffice/phpword": "dev-master",
