--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "tailwindcss": "^2.0.2"
     },
     "dependencies": {
+        "dropzone": "^6.0.0-beta.2",
         "sweetalert2": "^11.4.35"
     }
 }
